--- a/src/assets/css/theauthor.css
+++ b/src/assets/css/theauthor.css
@@ -12,16 +12,15 @@
 
 #the-author-container{
   background-color: rgb(0, 0, 0);  
+  /* text-shadow: 0px 0px 4px #c5f1ff; */
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  
   
 }
   
 .the-author-main{
   background-color: brown;
 }
-
-
-
-
 
 
 
@@ -33,80 +32,79 @@
   align-items: center;
   align-content: center;
   background-color: rgba(0, 0, 0, 0.5);
-  width: 70%;
+  width: 100%;
   color: aliceblue;
   border-radius: 1%;
+  box-shadow: 0px 0px 50px 27px #0000009b ;
 
 }
 
-.ta-section1-inner-div1{
+.ta-section1-inner{
+  width: 80%;
   display: flex;
   justify-content: center;
   align-items: center;
  
 }
 
+.ta-section1-inner-div1{
+  display: flex;
+  margin: 0% 2%;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 35%;
+  font-family: Verdana, Geneva, Tahoma, sans-serif ;;
+  font-size: 1vw ;
+  text-align: justify;
+  /* border: solid red 5px; */
+  
+}
+
+
 
 #profile-pic{
-  position: absolute;
-  left: 40%;
-  bottom: 72%;
-  width: 15%;
+  position: relative;
+  
+  width: 80%;
   border-radius: 50%;
-  border: solid rgba(240, 248, 255, 0.829) 4px;
-  box-shadow: 0px 0px 5px aliceblue;
+  border: solid rgba(240, 248, 255, 0.829) 1px;
+  box-shadow: 0px 0px 60px -15px aliceblue;
 }
 
 .ta-section1-inner-div2{
   display: flex;
-  width: 80%;
-  padding: 15% 5% 5% 5%;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  font-size: 0.8vw ;
-  font-weight:bold ;
-  text-align: justify;
-
-}
-
-.ta-section1-inner-div2 div{
-  display: flex;
-  flex-direction: column;
-  margin: 1%;
-  width: 50%;
-}
-.ta-section1-inner-div2 h2{
-  padding: 5% 5% 0% 5%;
   margin: 0%;
-}
-
-.ta-section1-inner-div2 ul{
-  
-  width: 70%;
-  height: 70%;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: flex-start;
+  padding-left: 3%;
+  flex-direction: column;
+  justify-content: center;
   align-items: flex-start;
-  align-content: space-evenly;
-  font-size: 0.7vw;
-
-}
-
-.ta-section1-inner-div2 ul li{
-  justify-content: flex-start;
-  align-items: center;
-  height: 15%;
+  width: 65%;
+  font-family: Verdana, Geneva, Tahoma, sans-serif ;;
+  font-size: 1.8vw ;
+  text-align: justify;
+  background: #00000094;
+  border-radius: 10px;
   
 }
 
-.ta-section1-inner-div2 ul li img{
-  width: 50%;
-  height: 100%;
-  margin: 5%;
-  
+.ta-section1-inner-div2 p {
+  color: rgb(159, 159, 159);
+  line-height: 1.5;
+ 
 }
 
+.ta-section1-inner-div2 img{
+ vertical-align: text-bottom;
+ width: 5%;
+}
+
+
+
+.ta-section1-inner-div2 a {
+  color: rgb(20, 161, 255);
+  text-decoration: none;
+}
 
 .ta-section2{
   display: flex;
@@ -115,77 +113,530 @@
   align-items: center;
   align-content: center;
   background-color: rgba(0, 0, 0, 0.5);
-  width: 70%;
+  width: 100%;
   color: aliceblue;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  font-size: 0.9vw;
-  font-weight: bold;
-  padding: 5% 0.5%;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 1.7vw;
+  line-height: 1.5;
+  text-align: justify;
+  padding: 2% 0%;
   border-radius: 1%;
+  box-shadow: 0px 0px 50px 27px #0000009b ;
+  text-shadow: 0px 0px 2px #c5f1ff;
+
+  
 }
 
 .ta-section2-inner{
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 83%;
   margin: 0% 5%;
   padding: 0.5%;
   border-radius: 1%;
 
 }
-.ta-section2-inner-div p{
-position: absolute;
-width: 50%;
-padding: 0.5%;
-left: 25%;
-text-align: center;
+
+.ta-section2-inner-div1{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+
+}
+.ta-section2-inner-div2{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: #000000;
+  width: 90%;
+  font-family: Verdana, Geneva, Tahoma, sans-serif ;;
+  font-size: 1vw ;
+  text-align: justify;
+  text-shadow: 0px 0px 3px #c5f1ff;
+
+
+}
+
+.ta-section2-list-div{
+  width: 30%;
+}
+.ta-section2-list-div h2{
+  padding: 5% 5% 3% 5%;
+  margin: 0%;
+  
+}
+
+.ta-section2-list-div ul{
+  
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  list-style: none;
+  padding-inline-start: unset;
+  font-size: 0.8vw;
+  background-color: rgba(107, 107, 107, 0.153);
+  border-radius: 2%;
+  box-shadow: 0px 0px 8px rgba(107, 107, 107, 0.301);
+
+}
+
+.ta-section2-list-div ul li{
+  display: flex;
+ 
+  align-items: center;
+  width: 100%;
+  margin:3%
+  
+}
+
+.ta-section2-list-div ul li img{
+  width: 7%;
+  margin: 2%;
+  
+  
+}
+
+.ta-section2-inner-div2 iframe{
+  width: 100%;
+  height: 50vh;
+  margin: 20px;
+  border: solid rgba(240, 248, 255, 0.199) 3px ;
+  border-radius: 5px;
+  box-shadow: 0px 0px 100px #50889971;
 }
 
 
-.ta-section3{
+
+
+
+
+
+.ta-section3-4{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  padding:0%;
+  color: aliceblue;
+  border-radius: 1%;
+  font-size: 1.2vw;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  box-shadow: 0px 0px 50px 27px #0000009b ;
+  text-shadow: 0px 0px 3px #c5f1ff;
+
+}
+
+.ta-section3-4 p{
+  font-size: 3.5vw;
+  text-shadow: 0px 0px 20px#c5f1ff;
+  align-self: flex-start;
+  padding-left: 8%;
+}
+
+
+
+.ta-section3-4-inner{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  background: black;
+  box-shadow: 0px 0px 15px 10px #000000;
+
+}
+
+
+
+.ta-section3-4-inner-div{
+  display: flex;
+  flex-direction: column;
+  justify-content: center ;
+  align-items: center;
+  width: 100%;
+  background: black;
+  margin: 0%;
+  border-radius: 1%;
+  box-shadow: 0px 0px 15px 10px #000000;
+}
+
+.ta-section3-4-inner-div p{
+    width: 85%;
+    font-size: 1.5vw;
+    line-height: 2;
+    text-align: justify;
+    text-shadow: none;
+    align-self: center;
+    color:rgb(190, 190, 190) ;
+    padding-left: 0%;
+
+}
+
+
+
+.ta-section3-inner-div-img{
+  display: flex;
+  width: 75%;
+  align-self: center ;
+  justify-content: center;
+  background-image: url('/images/30-Ride.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  align-items: center;
+  margin: 0% 5% 0% 5%; 
+  border-radius: 1%;
+}
+
+.ta-section4-inner-div-img{
+  display: flex;
+  width: 75%;
+  align-self: center ;
+  justify-content: center;
+  background-image: url('/images/25-Murals.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  align-items: center;
+  margin: 0% 5% 0% 5%; 
+  border-radius: 1%;
+}
+
+.ta-section3-inner-div-img img{
+  width: 100%;
+  visibility: hidden;
+ 
+}
+
+.ta-section4-inner-div-img img{
+  width: 100%;
+  visibility: hidden;
+ 
+}
+
+.animation-escape{
+  animation-name: escape;
+  animation-duration: 8s;
+  animation-iteration-count: infinite;
+}
+
+.animation-scenery{
+  animation-name: scenery;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes escape {
+  0%{background-image: url('/images/30-Ride.png');}
+  30%{background-image: url('/images/30-Ride.png');}
+  50%{background-image: url('/images/31-Ride1.png');}
+  55%{background-image: url('/images/31-Ride2.png');}
+  60%{background-image: url('/images/31-Ride3.png');}
+  65%{background-image: url('/images/31-Ride4.png');}
+  70%{background-image: url('/images/31-Ride5.png');}
+  80%{background-image: url('/images/31-Ride5.png');}
+  100%{background-image: url('/images/30-Ride.png');}
+ 
+}
+
+@keyframes scenery {
+  0%{background-image: url('/images/25-Murals.png');}
+  25%{background-image: url('/images/23-Cave.png');}
+  50%{background-image: url('/images/26-Exit.png');}
+  75%{background-image: url('/images/29-Ride.png');}
+  100%{background-image: url('/images/25-Murals.png');}
+
+ 
+}
+
+
+.ta-section4-video-div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5% 0%;
+  width: 75%;
+}
+.ta-section4-video-div video{
+  padding: 5px 5px;
+  background: #c5f1ff5d;
+  box-shadow: 0px 0px 25px 6px #c5f1ff9a ;
+  border-radius: 5px;
+  width: 90%;
+  
+}
+
+
+
+
+.ta-section5{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   align-content: center;
   background-color: rgba(0, 0, 0, 0.5);
-  width: 70%;
+  width: 100%;
   color: aliceblue;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  font-size: 0.9vw;
-  font-weight: bold;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 2vw;
+  line-height: 2;
   border-radius: 1%;
+  box-shadow: 0px 0px 50px 27px #0000009b ;
+  text-shadow: 0px 0px 3px #c5f1ff;
+
 }
 
-.ta-section3-inner{
+.ta-section5-inner{
   display: flex;
-  width: 100%;
-  margin: 5% 5%;
-  border-radius: 1%;
-
-}
-
-.ta-section3-inner-div1{
- display: flex;
- flex-wrap: wrap;
- flex-direction: row;
- align-items: center;
- justify-content: center;
- align-content: space-between;
-  width: 60%;
-  margin: 1%;
-  border-radius: 1%;
-
-}
-.ta-section3-inner-div2{
- 
-  width: 40%;
-  margin: 1%;
-  border-radius: 1%;
-
-}
-
-.ta-section3-inner-div2 video{
- 
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   border-radius: 1%;
+}
 
+
+
+.ta-section5 p{
+
+  padding-top: 3%;
+  text-align: center;
+  font-size: 2vw;
+}
+
+
+.ta-section5-inner-div2{
+  display: flex;
+  width: 80%;
+  height: 55vh;
+  margin: 1%;
+  border-radius: 1%;
+  background-color: rgba(0, 0, 0, 0.404);
+  padding: 0.5%;
+}
+
+.ta-section5-img-placeholder{
+  visibility: hidden;
+  height: 100%;
+  object-fit: contain;
+}
+
+.ta-section5-inner-div2 a{
+  text-decoration: none;
+
+}
+
+.ta-section5-inner-div2-block{
+  width: 25%;
+  background-color: aliceblue;
+  background-size: cover;
+  background-repeat: no-repeat;
+ 
+  
+}
+.block-position1{
+  background-position: 50% 0%;
+
+}
+.block-position2{
+  background-position: 30% 0%;
+  
+}
+.block-position3{
+  background-position: 30% 0%;
+  
+}
+.block-position3{
+  background-position: 30% 0%;
+  
+}
+
+.ta-section5-linkdiv{
+  transition: opacity 0.5s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  background-color: rgba(0, 0, 0, 0.836);
+  opacity: 0;
+  height: 100%;
+  width: 100%;
+  box-shadow: 0px 0px 20px 1px #c5f1ff60 inset;
+}
+
+.ta-section5-linkdiv button{
+  cursor: pointer;
+  font-size: 2vw;
+  width: 80%;
+  margin-right: 0.5vw ;
+  color: aliceblue;
+  border: none;
+  text-decoration: none;
+  background-color: rgba(0, 255, 255, 0);
+  font-family: 'aereann_2regular';
+  text-shadow: 0px 0px 10px #c5f1ff;
+}
+
+.ta-section5-linkdiv:hover{
+  opacity: 1;
+}
+
+@media screen and (max-width: 480px){
+  .ta-section1{
+    width: 100%;
+  }
+
+  .ta-section1-inner{
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .ta-section1-inner-div1{
+    width: 70%;
+    font-size: 2vw;
+    align-items: flex-start;
+  }
+  .ta-section1-inner-div2 {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    font-size: 4.8vw;
+    text-align: center;
+  }  
+  
+  #profile-pic{
+    width: 80%;
+  }  
+  
+
+
+  .ta-section2{
+    width: 100%;
+    font-size: 2vw;
+  }
+  .ta-section2-inner{
+    width: 100%;
+    margin: 0%;
+    padding: 0%;
+  }
+
+  .ta-section2-inner-div1 {
+    width: 100%;
+    font-size: 5vw ;
+    text-align: justify;
+    line-height: 2;
+  }
+  .ta-section2-inner-div1 p{
+    
+    padding: 0% 5%;
+  }
+
+  .ta-section2-inner p{
+    font-size: 5vw ;
+    line-height: 2;
+    text-align: justify;
+    padding: 0% 10%;
+  }
+
+
+  .ta-section2-inner-div2{
+    flex-direction: column-reverse;
+    background-color:#0000009b;
+    padding:  5% 0%;
+    box-shadow: 0px 0px 50px 27px #0000009b ;
+
+  }
+  .ta-section2-inner-div2 iframe {
+    width: 90%;
+    height: 25vh;
+    margin: 2%;
+  }
+ 
+  .ta-section2-list-div {
+    width: 90%;
+    margin-left: 0%;
+    font-size: 3vw;
+}
+
+
+.ta-section2-list-div ul{
+  font-size: 3vw;
+  padding: 1%;
+}
+
+.ta-section2-list-div ul li{
+  width: 25%;
+  margin: 0%;
+}
+
+.ta-section2-list-div ul li img {
+  width: 18%;
+  margin: 5%;
+}
+  
+.ta-section3-4{
+  width: 100%;
+  color: aliceblue;
+}
+.ta-section3-4-inner{
+  width: 100%;
+}
+.ta-section3-4 p{
+  font-size: 5.5vw;
+  text-align: justify;
+  line-height: 2;
+  padding: 0% 10%;
+}
+
+.ta-section3-4-inner-div p{
+  font-size: 4.5vw;
+  text-align: justify;
+  line-height: 2;
+  padding: 0% 10%;
+  color: #d5d5d5;
+}
+
+.ta-section3-4-inner-div1 {
+  padding: 2% 5%;
+  
+}
+
+.ta-section4{
+  width: 100%;
+  font-size: 2.1vw;
+}
+
+.ta-section4-inner-div2{
+  padding: 1% 5%;
+}
+
+  .ta-section5{
+    width: 100%;
+    font-size: 2vw;
+    text-align: justify;
+  }
+
+  .ta-section5-inner{
+    margin: 0% 0%;
+  }
+  
+  .ta-section5-inner p{
+    
+    font-size: 5vw;
+  }
+
+  .ta-section5-inner-div2{
+    margin: 0% -1%;
+    padding: 0.5vw;
+    width: 100%;
+    height: 55vh;
+  }
 }
